# pam-import

./: README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: import.rs  main.rs
src/lib/: ProgressBar.svelte
src/routes/: +page.svelte
