[package]
name = "pam-import"
version = "1.0.0"
description = "Photo And Movie Import Tool"
authors = ["Kevin Lee Drum"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "path-all", "dialog-open", "shell-open", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-recursion = "1.1.1"
chrono = "0.4.38"
kamadak-exif = "0.5.5"
sysinfo = "0.30.12"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
